# deckz

./: .flake8  .gitignore  Dockerfile  Makefile  Makefile.ps1  README.md  codecov.yml  dev-requirements.in  dev-requirements.txt  dodo.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml  pages.yml
deckz/: __init__.py  __main__.py  builder.py  building.py  cli.py  compiling.py  config.py  deck_building.py  deps.py  exceptions.py  github_querying.py  mailing.py  paths.py  plot_utils.py  rendering.py  repository.py  runner.py  running.py  sections_analyzer.py  settings.py  standalones.py  targets.py  uploader.py  uploading.py  utils.py  watching.py
deckz/building/: building.py  compiling.py  rendering.py  standalones.py  watching.py
deckz/cli/: __init__.py  check_all.py  clean.py  clean_all.py  clean_latex.py  debug.py  deps.py  fill.py  img_deps.py  img_search.py  init.py  issue.py  migrate.py  migrate_sections.py  print_config.py  random.py  run.py  run_all.py  upload.py  watch.py  watch_file.py  watch_section.py  watch_standalones.py
deckz/cli/extras/: issue.py  random.py  upload.py
deckz/configuring/: config.py  paths.py  settings.py
deckz/extras/: github_querying.py  uploading.py
deckz/models/: __init__.py  deck.py  definitions.py  scalars.py
deckz/parsing/: targets.py  tree_parsing.py
deckz/parsing/visitors/: dependencies.py  rich_tree.py  titles_and_contents.py
deckz/processing/: __init__.py  dependencies.py  part_dependencies.py  rich_tree.py  section_dependencies.py  section_stats.py  sections_usage.py  titles_and_contents.py
docs/: gen_ref_pages.py  index.md
docs/css/: code_select.css
docs/plugins/: griffe_doclinks.py
src/deckz/: __init__.py  deck_building.py  exceptions.py  models.py  pipelines.py  running.py  sections_analyzer.py  utils.py
src/deckz/analyzing/: images_analyzer.py  sections_analyzer.py
src/deckz/building/: building.py  compiling.py  rendering.py  standalones.py  watching.py
src/deckz/cli/: __init__.py  asset_deps.py  asset_search.py  check_all.py  clean.py  clean_all.py  deps.py  generate_completion.py  img_deps.py  img_search.py  print_config.py  print_settings.py  print_variables.py  run.py  tree.py  upgrade.py  watch.py
src/deckz/cli/extras/: issue.py  random.py  upload.py
src/deckz/components/: __init__.py  assets_analyzer.py  assets_analyzing.py  assets_builder.py  assets_building.py  assets_metadata_retriever.py  assets_metadata_retrieving.py  assets_searcher.py  assets_searching.py  compiler.py  compiling.py  deck_builder.py  deck_building.py  factory.py  parser.py  parsing.py  protocols.py  renderer.py  rendering.py
src/deckz/configuring/: __init__.py  config.py  paths.py  registry.py  settings.py  variables.py
src/deckz/extras/: github_querying.py  mailing.py  uploading.py
src/deckz/models/: __init__.py  compilation.py  deck.py  definitions.py  scalars.py  slides.py
src/deckz/processing/: __init__.py  part_dependencies.py  rich_tree.py  section_dependencies.py  sections_usage.py  titles_and_contents.py
tests/: test_cli.py
tests/test_cli/: deckz.yml  global-config.yml  settings.yml  user-config.yml  variables.yml
tests/test_cli/company/: company-config.yml
tests/test_cli/company/abc/: deck-config.yml  deck.yml  session-config.yml  targets-debug.yml  targets.yml  variables.yml
tests/test_cli/company/abc/latex/first-section/: first-section.yml  intro.tex
tests/test_cli/company/abc/p1/first-section/: about.tex  advanced.tex  conclusion.tex  first-section.yml  section.yml
tests/test_cli/company/abc/p2/: about.tex
tests/test_cli/jinja2/: main.tex.jinja2  v1.tex.jinja2
tests/test_cli/shared/latex/: questions.tex
tests/test_cli/templates/: subsection.tex  targets.yml
tests/test_cli/templates/jinja2/: main.tex  print.tex
tests/test_cli/templates/yml/: company-config.yml  deck-config.yml  targets.yml  user-config.yml
