[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
  {name = "NyxAether", email = "contact.nyxhemera@gmail.com"},
]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "appdirs >= 1, < 2",
  "cyclopts >= 3.1.1, < 4",
  "email-validator >= 2, < 3",
  "google-api-python-client >= 2, < 3",
  "google-auth-oauthlib >= 1, < 2",
  "jinja2 >= 3, < 4",
  "kaleido >= 1, < 2",
  "matplotlib >= 3, < 4",
  "niquests >= 3, < 4",
  "plotly >= 6, < 7",
  "pydantic >= 2, < 3",
  "pygit2 >= 1, < 2",
  "pyyaml >= 6, < 7",
  "rich >= 14, < 15",
  "sendgrid >= 6, < 7",
  "typer >= 0.13, < 1",
  "watchfiles >= 1, < 2",
]
description = "Tool to handle multiple beamer decks."
homepage = "https://github.com/shuuchuu/deckz"
name = "deckz"
readme = "README.md"
requires-python = ">= 3.12"
version = "24.1.3"

[dependency-groups]
dev = [
  "mkdocs >= 1",
  "mkdocs-gen-files >= 0.5",
  "mkdocs-literate-nav >= 0.6",
  "mkdocs-material >= 9",
  "mkdocs-section-index >= 0.3",
  "mkdocstrings[python] >= 0.29",
  "mypy >= 1",
  "pdfminer.six >= 20250327",
  "pytest >= 8",
  "pytest-cov >= 6",
  "ruff >= 0.11",
  "types-appdirs >= 1, < 2",
  "types-pyyaml >= 6",
]

[project.scripts]
deckz = 'deckz.cli:main'

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["D1", "D203", "D213"]
preview = true
select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "TC", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.22,<0.9.0"]
