[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
  {name = "NyxAether", email = "contact.nyxhemera@gmail.com"},
]
classifiers = [
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "appdirs >= 1, < 2",
  "cyclopts >= 4, < 5",
  "email-validator >= 2, < 3",
  "google-api-python-client >= 2, < 3",
  "google-auth-oauthlib >= 1, < 2",
  "jinja2 >= 3, < 4",
  "kaleido >= 1, < 2",
  "matplotlib >= 3, < 4",
  "niquests >= 3, < 4",
  "plotly >= 6, < 7",
  "pydantic >= 2, < 3",
  "pygit2 >= 1, < 2",
  "pyyaml >= 6, < 7",
  "rich >= 14, < 15",
  "sendgrid >= 6, < 7",
  "typer >= 0.13, < 1",
  "watchfiles >= 1, < 2",
]
description = "Tool to handle multiple beamer decks."
homepage = "https://github.com/shuuchuu/deckz"
license = "Apache-2.0"
license-files = ["LICENSE*"]
name = "deckz"
readme = "README.md"
requires-python = ">= 3.12"
version = "24.3.2"

[dependency-groups]
dev = [
  "bumpver >= 2025.1131",
  "doit >= 0.37",
  "mkdocs >= 1",
  "mkdocs-gen-files >= 0.5",
  "mkdocs-literate-nav >= 0.6",
  "mkdocs-material >= 9",
  "mkdocs-section-index >= 0.3",
  "mkdocstrings[python] >= 0.29",
  "pdfminer.six >= 20250327",
  "pytest >= 8",
  "pytest-cov >= 6",
  "ruff >= 0.11",
  "ty >= 0.0.33",
  "types-appdirs >= 1, < 2",
  "types-pyyaml >= 6",
]

[project.scripts]
deckz = 'deckz.cli:main'

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["D1", "D203", "D213", "RUF067"]
preview = true
select = ["A", "B", "C", "D", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "TC", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[bumpver]
commit = true
commit_message = "Bump version to {new_version}"
current_version = "24.3.2"
tag = true
tag_message = "{new_version}"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{version}"$',
  '^current_version = "{version}"$',
]
"src/deckz/__init__.py" = [
  '^__version__ = "{version}"$',
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<0.12.0"]
